# GlobalSingleton

./: .gitignore  CMakeLists.txt  ExeDllSingleton.sln  LICENSE.txt  README.md  README.txt
.github/workflows/: linux.yml  windows.yml
Common/: DllWrapper.hpp  GlobalSingleton.hpp  GlobalSingletonContext.hpp  GlobalSingletonInstance.hpp  GlobalSingletonRegister.hpp  NonCopyable.hpp  Singleton.hpp
ExeDllSingleton/: ExeDllSingleton.vcxproj  ExeDllSingleton.vcxproj.filters  Main.cpp  TestExe.h
SingletonManager/: SingletonManager.cpp  SingletonManager.vcxproj  SingletonManager.vcxproj.filters
TestDll1/: TestDll1.cpp  TestDll1.h  TestDll1.vcxproj  TestDll1.vcxproj.filters
TestDll2/: TestDll2.cpp  TestDll2.h  TestDll2.vcxproj  TestDll2.vcxproj.filters
